--- a/src/app/components/client-header/client-header.component.html
+++ b/src/app/components/client-header/client-header.component.html
@@ -25,7 +25,10 @@
     </button>
 
     <button *ngIf="!user" mat-flat-button (click)="openLink(['/user/login'])">
-      وارد شوید
+      ورود
+    </button>
+    <button *ngIf="!user" mat-flat-button (click)="openLink(['/user/signup'])">
+      ثبت نام
     </button>
   </div>
 </div>
