--- a/src/app/pages/client/forget-password/forget-password.component.scss
+++ b/src/app/pages/client/forget-password/forget-password.component.scss
@@ -59,7 +59,12 @@ mat-error {
 }
 .error {
   text-align: center;
-  margin-top: 10px;
+  // margin-top: 10px;
   color: red;
   font-size: 14px;
+}
+.email {
+  text-align: center;
+  color: #130f40;
+  font-weight: 600;
 }
