--- a/src/app/components/client-footer/client-footer.component.html
+++ b/src/app/components/client-footer/client-footer.component.html
@@ -2,46 +2,21 @@
   <div class="footer-container">
     <div class="col-md-4 col-12 footer-nav">
       <span>
-        <a routerLink="/user/rules">
-        قوانین
-        </a>
+        <a href="#"> سلب مسئولیت </a>
       </span>
       <span>
-        <a href="#">
-          سلب مسئولیت
-        </a>
+        <a routerLink="/user/rules"> قوانین </a>
       </span>
       <span>
-        <a href="#">
-          کانال و پشتیبانی تلگرام
-        </a>
+        <a href="#"> کانال و پشتیبانی تلگرام </a>
       </span>
     </div>
-    <div
-      style="text-align: left"
-      class="social col-md-1 col-12"
-    >
-      <span>
-        <a href="#">
-          <img src="./assets/facebook.svg"/>
-        </a>
-      </span>
-      <span>
-        <a href="#">
-          <img src="./assets/twitter.svg"/>
-        </a>
-      </span>
-      <span>
-        <a href="#">
-          <img src="./assets/telegram.svg"/>
-        </a>
-      </span>
-      <span>
-        <a href="#">
-          <img src="./assets/instagram.svg"/>
-        </a>
-      </span>
+    <div style="text-align: left" class="copy-right col-md-4 col-12">
+      <div>
+        طراحی و برنامه نویسی :
+        <a href="https://moshavernet.com" target="_blank"> مشاورنت </a> | کپی
+        رایت &copy; 1399
+      </div>
     </div>
   </div>
-
 </footer>
