--- a/src/app/pages/admin/ads-modify/ads-modify.component.html
+++ b/src/app/pages/admin/ads-modify/ads-modify.component.html
@@ -1,6 +1,6 @@
 <div>
   <h1 *ngIf="data.state === 'create'" mat-dialog-title>ایجاد تبلیغ جدید</h1>
-  <h1 *ngIf="data.state === 'edit'"> ویرایش تبلیغ</h1>
+  <h1 *ngIf="data.state === 'edit'">ویرایش تبلیغ</h1>
   <div class="form-container">
     <div>
       <mat-form-field class="col-6" appearance="fill">
@@ -16,39 +16,34 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="fill" class="col-3">
-        <mat-label>
-          نمایش تبلیغ
-        </mat-label>
+        <mat-label> نمایش تبلیغ </mat-label>
         <mat-select [(ngModel)]="ads.iran">
-          <mat-option [value]="true">
-            ایران
-          </mat-option>
-          <mat-option [value]="false">
-            خارج
-          </mat-option>
+          <mat-option [value]="true"> ایران </mat-option>
+          <mat-option [value]="false"> خارج </mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field appearance="fill" class="col-3">
-        <mat-label>
-          نوع تبلیغ
-        </mat-label>
+        <mat-label> نوع تبلیغ </mat-label>
         <mat-select [formControl]="typeControl" [(ngModel)]="ads.type">
-          <mat-option value="movie">
-            فیلم
-          </mat-option>
+          <mat-option value="movie"> فیلم </mat-option>
           <mat-option value="vertical"> عمودی</mat-option>
           <mat-option value="horizontal"> افقی</mat-option>
-          <mat-option value="popup">
-            پاپ آپ
-          </mat-option>
+          <mat-option value="popup"> پاپ آپ </mat-option>
+          <mat-option value="vast"> وست </mat-option>
         </mat-select>
         <mat-error *ngIf="typeControl.hasError('required')">
           نوع تبلیغ الزامی است
         </mat-error>
       </mat-form-field>
     </div>
-    <div class="col-12 row banner"
-         *ngIf="ads.type === 'movie' || ads.type === 'vertical' || ads.type === 'horizontal'">
+    <div
+      class="col-12 row banner"
+      *ngIf="
+        ads.type === 'movie' ||
+        ads.type === 'vertical' ||
+        ads.type === 'horizontal'
+      "
+    >
       <mat-card (click)="openFileChooser()" class="col-4 image-chooser">
         <div>
           <mat-icon>cloud_upload</mat-icon>
@@ -65,7 +60,7 @@
           ></mat-progress-spinner>
         </div>
         <div class="image" *ngIf="ads.image">
-          <img [src]="BASE_URL + '/api/' + ads.image"/>
+          <img [src]="BASE_URL + '/api/' + ads.image" />
         </div>
       </div>
     </div>
