--- a/src/app/pages/admin/links/links.component.html
+++ b/src/app/pages/admin/links/links.component.html
@@ -1,12 +1,16 @@
-<mat-toolbar color="primary" >
+<mat-toolbar color="primary">
   <span> لینک ها </span>
 </mat-toolbar>
-<mat-progress-bar *ngIf="loading" color="warn" mode="indeterminate"></mat-progress-bar>
+<mat-progress-bar
+  *ngIf="loading"
+  color="warn"
+  mode="indeterminate"
+></mat-progress-bar>
 <div class="table-container">
   <mat-card class="search-card">
     <div class="row space-between">
       <div class="col-4">
-        <mat-form-field style="width: 100%;">
+        <mat-form-field style="width: 100%">
           <mat-label> جست و جو</mat-label>
           <input
             [formControl]="searchControl"
@@ -21,15 +25,9 @@
       <div class="col-3">
         <mat-form-field>
           <mat-select [(ngModel)]="status" (selectionChange)="resetPage()">
-            <mat-option [value]="'active'">
-              لینک های فعال
-            </mat-option>
-            <mat-option [value]="'inactive'">
-              لینک غیر فعال
-            </mat-option>
-            <mat-option [value]="'warning'">
-              لینک های دارای تخلف
-            </mat-option>
+            <mat-option [value]="'active'"> لینک های فعال </mat-option>
+            <mat-option [value]="'inactive'"> لینک غیر فعال </mat-option>
+            <mat-option [value]="'warning'"> لینک های دارای تخلف </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
@@ -51,24 +49,18 @@
       </ng-container>
 
       <ng-container matColumnDef="phone">
-        <th mat-header-cell *matHeaderCellDef>شماره تلفن</th>
+        <th mat-header-cell *matHeaderCellDef>نام کاربری</th>
         <td mat-cell *matCellDef="let element">
-          {{ !element.user ? "بدون ثبت نام" : element.user.phone }}
+          {{ !element.user ? "بدون ثبت نام" : element.user.username }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>وضعیت</th>
         <td mat-cell *matCellDef="let element" [ngSwitch]="element.status">
-          <span *ngSwitchCase="'active'">
-            فعال
-          </span>
-          <span *ngSwitchCase="'inactive'">
-            غیر فعال
-          </span>
-          <span *ngSwitchCase="'warning'">
-            مشکل دار
-          </span>
+          <span *ngSwitchCase="'active'"> فعال </span>
+          <span *ngSwitchCase="'inactive'"> غیر فعال </span>
+          <span *ngSwitchCase="'warning'"> مشکل دار </span>
         </td>
       </ng-container>
 
@@ -87,9 +79,16 @@
       </ng-container>
 
       <ng-container matColumnDef="showAds">
-        <th mat-header-cell *matHeaderCellDef>نوع تبلیغاد</th>
+        <th mat-header-cell *matHeaderCellDef>نوع تبلیغات</th>
         <td mat-cell *matCellDef="let element">
           {{ element.showAds ? "درآمدزا" : "بدون درامد" }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="popUp">
+        <th mat-header-cell *matHeaderCellDef>پاپ آپ</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.popUp ? "فعال" : "غیر فعال" }}
         </td>
       </ng-container>
 
@@ -113,7 +112,7 @@
 
           <button
             *ngIf="element.showAds"
-            style="color: teal;"
+            style="color: teal"
             mat-icon-button
             [routerLink]="['/member/dashboard/link', element._id]"
           >
@@ -127,20 +126,12 @@
     </table>
     <div class="pagination-container justify-content-left mat-elevation-z1">
       <div class="pagination">
-        <span class="inf">
-          تعداد نمایش در هر صفحه
-        </span>
+        <span class="inf"> تعداد نمایش در هر صفحه </span>
         <mat-form-field>
           <mat-select [(ngModel)]="limit" (selectionChange)="selectionChange()">
-            <mat-option [value]="10">
-              10
-            </mat-option>
-            <mat-option [value]="20">
-              20
-            </mat-option>
-            <mat-option [value]="50">
-              50
-            </mat-option>
+            <mat-option [value]="10"> 10 </mat-option>
+            <mat-option [value]="20"> 20 </mat-option>
+            <mat-option [value]="50"> 50 </mat-option>
           </mat-select>
         </mat-form-field>
 
