--- a/src/app/pages/admin/users/users.component.html
+++ b/src/app/pages/admin/users/users.component.html
@@ -42,19 +42,14 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>نام</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef>نام کاربری</th>
+        <td mat-cell *matCellDef="let element">{{ element.username }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="family">
-        <th mat-header-cell *matHeaderCellDef>نام خانوادگی</th>
-        <td mat-cell *matCellDef="let element">{{ element.family }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="phone">
-        <th mat-header-cell *matHeaderCellDef>شماره تلفن</th>
-        <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>ایمیل</th>
+        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
       </ng-container>
 
       <ng-container matColumnDef="status">
