--- a/src/app/templates/client-template/client-template.component.html
+++ b/src/app/templates/client-template/client-template.component.html
@@ -5,7 +5,7 @@
     (openedChange)="settingService.drawer$.next($event)"
     [opened]="settingService.drawer$ | async"
   >
-    <div dir="rtl" style="min-width: 80vw;max-width: 80vw;">
+    <div dir="rtl" style="min-width: 80vw; max-width: 80vw">
       <mat-toolbar color="primary">
         <mat-toolbar-row>
           <span>راهبری</span>
@@ -14,7 +14,7 @@
       <mat-action-list>
         <button mat-list-item (click)="openLink(['/'])">
           <mat-icon matListIcon> home</mat-icon>
-          <h3 matLine> صفحه اصلی </h3>
+          <h3 matLine>صفحه اصلی</h3>
         </button>
         <button mat-list-item>
           <mat-icon matListIcon>book</mat-icon>
@@ -22,23 +22,33 @@
         </button>
         <button mat-list-item (click)="openLink(['/send/ticket'])">
           <mat-icon matListIcon> local_offer</mat-icon>
-          <h3 matLine > پشتیبانی </h3>
+          <h3 matLine>پشتیبانی</h3>
         </button>
         <mat-divider></mat-divider>
         <button
           mat-list-item
           *ngIf="!(userService.user$ | async)"
-          (click)="openLink(['/user/login'])"
+          (click)="openLink(['/user/signup'])"
         >
           <mat-icon matListIcon>person</mat-icon>
-          <h3 matLine> وارد شوید </h3>
+          <h3 matLine>ثبت نام</h3>
         </button>
+        <button
+          mat-list-item
+          *ngIf="!(userService.user$ | async)"
+          (click)="openLink(['/user/login'])"
+        >
+          <mat-icon matListIcon>input</mat-icon>
+          <h3 matLine>وارد شوید</h3>
+        </button>
+
         <button
           mat-list-item
           *ngIf="!!(userService.user$ | async)"
           (click)="openLink(['/member/dashboard'])"
         >
-          <h3 matLine> داشبورد </h3>
+          <mat-icon matListIcon>dashboard</mat-icon>
+          <h3 matLine>داشبورد</h3>
         </button>
       </mat-action-list>
     </div>
