--- a/src/app/templates/dashboard-template/dashboard-template.component.html
+++ b/src/app/templates/dashboard-template/dashboard-template.component.html
@@ -9,10 +9,8 @@
   >
     <mat-toolbar class="menu-header"> پنل کاربری</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item class="menu-item" (click)="openDialog()" >
-        <mat-icon>
-          add_circle_outline
-        </mat-icon>
+      <a mat-list-item class="menu-item" (click)="openDialog()">
+        <mat-icon> add_circle_outline </mat-icon>
         ایجاد لینک جدید
       </a>
       <a
@@ -49,9 +47,7 @@
           matTooltip="درامد شما هر دو ساعت یکبار به صورت خودکار محاسبه میشود"
           class="btn-header"
         >
-          <div class="title">
-            موجودی در دسترس
-          </div>
+          <div class="title">موجودی در دسترس</div>
           <div class="price">{{ user.salary | price }} تومان</div>
         </button>
       </div>
